--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "prisma": "^3.4.2"
   },
   "dependencies": {
-    "@prisma/client": "^3.4.2"
+    "@prisma/client": "^3.4.2",
+    "express": "^4.17.1"
   }
 }
